--- a/app/index.html
+++ b/app/index.html
@@ -5,15 +5,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&family=Nunito:wght@500;800&family=Space+Mono&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Nunito:wght@500;800&family=Space+Mono&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
-  <title>Challenge 1 Week 2</title>
+  <title>Perfume shop</title>
 </head>
 
 <body>
   <section class="card">
-    <img src="" alt="">
-    <div></div>
+    <div class="card__element">
+      <div class="card__image">
+        <img src="images/image-product-mobile.jpg" alt="Perfume channel"
+          srcset="images/image-product-mobile.jpg 500w, images/image-product-desktop.jpg">
+      </div>
+      <div class="card__box">
+        <span class="card__category">Perfume</span>
+        <h2 class="card__title">Gabrielle Essence Eau De Parfum</h2>
+        <p class="card__description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="card__prices">
+          <span class="card__new-price">$149.99</span>
+          <span class="card__old-price">$169.99</span>
+        </div>
+        <button class="card__cart">Add to cart</button>
+      </div>
+    </div>
   </section>
 
 </body>
